Bugfix: scrollTop/scrollLeft never worked because .b-content has overflow:auto not the sub-div .content

--- a/dev/Styles/Contacts.less
+++ b/dev/Styles/Contacts.less
@@ -86,6 +86,7 @@
 			width: @contacts-popup-left-width;
 			overflow: hidden;
 			overflow-y: auto;
+			scroll-behavior: smooth;
 
 			.content {
 				-webkit-overflow-scrolling: touch;
