--- a/dev/Styles/MessageList.less
+++ b/dev/Styles/MessageList.less
@@ -125,6 +125,7 @@ html.rl-no-preview-pane {
 		overflow-x: hidden;
 		overflow-y: auto;
 		z-index: 101;
+		scroll-behavior: smooth;
 
 		box-sizing: border-box;
 
