--- a/dev/Styles/MessageView.less
+++ b/dev/Styles/MessageView.less
@@ -258,6 +258,7 @@ html.rl-no-preview-pane {
 			overflow: auto;
 			-webkit-overflow-scrolling: touch;
 			border-radius: @rlLowBorderRadius;
+			scroll-behavior: smooth;
 
 			.buttonUp, .buttonUnFull, .buttonFull {
 				display: inline-block;
