--- a/dev/Styles/Settings.less
+++ b/dev/Styles/Settings.less
@@ -92,6 +92,7 @@
 		right: @rlLowMargin;
 		overflow-y: auto;
 		z-index: 2;
+		scroll-behavior: smooth;
 
 		background-color: #fff;
 		border: @rlMainBorderSize solid @rlMainDarkColor;
